Add connection to MongoDb

--- a/SquaresApi/appsettings.json
+++ b/SquaresApi/appsettings.json
@@ -2,5 +2,10 @@
   "Swagger": {
     "Title": "Squares API",
     "Description": "API for identifying squares from coordinates"
+  },
+  "SquaresDatabaseSettings": {
+    "SquaresCollectionName": "squares",
+    "ConnectionString": "mongodb://localhost:27017",
+    "DatabaseName": "squaresDb"
   }
 }
